style: tiny changes

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -40,9 +40,9 @@
 }
 
 ::-webkit-scrollbar-track {
-  @apply bg-slate-700;
+  @apply bg-base-100;
 }
 
 ::-webkit-scrollbar-thumb {
-  @apply rounded-lg shadow-inner bg-slate-50/10 hover:bg-slate-100/20;
+  @apply rounded-lg shadow-inner bg-base-200 hover:bg-base-300;
 }
